--- a/Capstone_introduction.ipynb
+++ b/Capstone_introduction.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#This notebook is using just for ibm coursera course"
+    "This notebook is using just for ibm coursera course"
    ]
   },
   {
