--- a/Neighborhoods_Toronto.ipynb
+++ b/Neighborhoods_Toronto.ipynb
@@ -4989,6 +4989,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From cluster that we generate we can define each cluster characteristic as follow:\n",
+    "\n",
+    "1.First cluster is all about public space and some shop\n",
+    "\n",
+    "2.Second cluster is all about cafe clolthing store and some restaurant\n",
+    "\n",
+    "3.Third cluster is all about mixed of store\n",
+    "\n",
+    "4.Fourth cluster is about some restaurant and some store\n",
+    "\n",
+    "5.Five cluster all most common place is Grocery Store and shopping store"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
