--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For many business owners who want to succeed in a competitive world, the most asked question at the beginning of the stage is always 'Where should I open my business', because the right place for business will always come with benefits such as more customer or more sale So business owner often relies on consultant firm or their human instinct to decide where should they open their business ,Will it be great if instead of random choice and instinct?. We can rely on customer generate data to decide the best place for a business like if somewhere most common place is restaurant type, We can assume that neighborhood is restaurant cluster and customers will likely to go there to find something to eat. In this report, we will try to use customer generate location data from Foursquare API to try to tackle this problem."
+    "For many business owners who want to succeed in a competitive world, the most asked question at the beginning of the stage is always 'Where should I open my business', because the right place for business will always come with benefits such as more customer or more sale So business owner often relies on consultant firm or their human instinct to decide where should they open their business ,Will it be great if instead of random choice and instinct?. We can rely on customer generate data to decide the best place for a business like if somewhere most common place is restaurant type, We can assume that neighborhood is restaurant cluster and customers will likely to go there to find something to eat. \n",
+    "\n",
+    "Boston city is the largest city and the capital city of Massachusetts They have many people live there with multinational and preference. So in this report, we will try to use customer generate location data from Foursquare API to try to find the best neighborhood to open a restaurant in Boston city."
    ]
   },
   {
